css/deploy.css
/* ... */
.custom-dropdown ul li:hover {
    background: #e6e6e6;
}

.custom-dropdown ul li:last-child {
    border-bottom: 1px solid #e6e6e6;
}

.custom-dropdown .dropdown-button {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    border: 1px solid #e6e6e6;
    /*border-bottom: none;*/
    font-weight: bold;
    color: #6B6B6B;
    position: relative;
    cursor: pointer;
}

.custom-dropdown .dropdown-button div {
    padding: 10px;
}

.custom-dropdown .dropdown-button:after {
    content: '';
    width: 20px;
    height: 15px;
    background: url(../images/arrow.png) no-repeat;
    position: absolute;
    right: 0;
    top: 12px;
}

.custom-dropdown .dropdown-button .chosen-item-text, .custom-dropdown .dropdown-button .chosen-item-text-deploy {
    font-weight: normal;
    color: #2B7AE5;
    border-left: 1px solid #e6e6e6;
}

.data-container .resources-list {
    border-left: 1px solid #e0e0e0;
    border-right: 1px solid #e0e0e0;
}

.data-container .resources-list .resource-row {
    display: flex;
    flex-direction: column;
    border-bottom: 1px solid #e0e0e0;
}

.data-container .resources-list .resource-row .view-row {
    display: flex;
    flex-direction: row;
    padding: 16px 0 10px 0;
    cursor: pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.data-container .resources-list .resource-row:last-child {
    border-bottom: 1px solid #e0e0e0;
}

.data-container .resources-list .resource-row .view-row > div {
    word-wrap: break-word;
    box-sizing: border-box;
    padding-left: 20px;
}

.data-container .resources-list .resource-row .view-row .name {
    color: #2B7AE5;
}

.data-container .resources-list .resource-row .view-row .status {
    font-weight: bold;
}

.data-container .resources-list .resource-row .view-row.error-status .status,
.data-container .resources-list .resource-row .view-row.error-status .action,
.data-container .resources-list .resource-row .view-row.error-status .name {
    color: #E53E2B;
}

.data-container .resources-list .resource-row .view-row.stable-status .status {
    color: #0DBF7F;
}

.data-container .resources-list .resource-row .view-row .status-timestamp, .resource-list-header .status-timestamp {
    color: #6B6B6B;
}

.data-container .type {
    width: 20%;
    max-width: 20%;
}

.data-container .name {
    width: 25%;
    max-width: 25%;
}

.data-container .status {
    width: 15%;
    max-width: 15%;
}

.data-container .action {
    width: 10%;
    max-width: 10%;
}

.data-container .executionTime {
    width: 15%;
    max-width: 15%;
}

.data-container .status-timestamp {
    width: 15%;
    max-width: 15%;
}

.data-container .resources-list .resource-row .expandable-row {
    background: #f2f2f2;
    margin: 5px;
    padding: 0 15px;
}

.data-container .resources-list .resource-row .expandable-row .message {
    display: flex;
    flex-direction: row;
    padding: 20px 0;
    border-bottom: 1px solid #e0e0e0;
}

.data-container .resources-list .resource-row .expandable-row .message .error-title {
    display: flex;
    width: 35%;
    flex-direction: column;
    justify-content: space-around;
}

.data-container .resources-list .resource-row .expandable-row .message .resource-error-description {
    display: flex;
    width: 75%;
}

.data-container .resources-list .resource-row .expandable-row .message .error-title .name {
    font-weight: bold;
}

.data-container .resources-list .resource-row .expandable-row .message .error-title .code {
}

.data-container .resources-list .resource-row .expandable-row .logs {
    display: flex;
    flex-direction: row;
    padding: 20px 0;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output {
    width: 50%;
    color: #333333;
    word-break: break-all;
    margin: 0 10px;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .label {
    font-style: italic;
    padding: 2px 0;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .error .label {
    color: #E53E2B;
    font-weight: bold;
    font-style: normal;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .error .error-label {
    font-weight: bold;
    font-style: normal;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .input-record {
    font-weight: bold;
}

.data-container .resources-list .resource-row .expandable-row .logs .logs-output .input-record span {
    font-weight: normal;
}

.custom-radio-btns-group {
    /*margin: 10px;*/
}

.custom-radio-btns-group .custom-radio-button {
    font-weight: 700;
    font-style: normal;
    font-size: 14px;
    color: #6B6B6B;
    cursor: pointer;
    margin-left: 8px;
    min-width: 140px;
    text-transform: uppercase;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.custom-radio-btns-group .custom-radio-button:before {
    content: '';
    background: url(../images/radio-btrn.png) 0 0;
    padding: 0 8px;
    position: relative;
    left: -5px;
    top: 0;
}

.custom-radio-btns-group .custom-radio-button.active:before {
    background-position: 0 16px;
}

.custom-radio-btns-group .custom-radio-button input {
    display: none;
}

.v-hidden {
    visibility: hidden !important;
}

.hidden {
    display: none !important;
}

.visible {
    display: flex !important;
}

.resource-list-header {
    text-transform: uppercase;
    display: flex;
    flex-direction: row;
    font-size: 12px;
    padding: 10px 0;
}

.resource-list-header.deploy-list-header {
    text-transform: inherit;
}
/* ... */

